# 6502emu

./: .gitignore  CMakeLists.txt  README.md  build.sh  cpu.cpp  cpu.h  main.cpp  types.h
lib/cpu/: cpu.cpp  cpu.h
lib/mem/: mem.h
lib/types/: types.h
src/: main.cpp
src/cpu/: cpu.cpp  cpu.h
src/mem/: mem.cpp  mem.h
